--- a/simple.html
+++ b/simple.html
@@ -7,6 +7,9 @@
 			padding-top: 50px;
 			padding-bottom: 20px;
 		}
+		p {
+			background-color: blue;
+		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 </head>
