--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <head>
-	<title>new title branched</title>
+	<title>new title finalized</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
 			padding-top: 50px;
 			padding-bottom: 20px;
+		}
+		p {
+			background-color: cyan;
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
