--- a/simple.html
+++ b/simple.html
@@ -5,14 +5,9 @@
 	<style>
 		body {
 			padding-top: 50px;
-			padding-bottom: 20px;
 			padding-left: 90px;
 		}
 		p {
-<<<<<<< HEAD
-			background-color: blue;
-=======
->>>>>>> conflicting
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -21,7 +16,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			some content
 		</p>
 		<p>
 		more
